Javított 3. heti feladatsor.

--- a/feladatok/03.md
+++ b/feladatok/03.md
@@ -48,7 +48,7 @@ Az elõzõ feladathoz hasonló, de ne a számok átlagát, hanem maximumát számolja.
 ```cpp
 class MaximumKereso {
 private:
-	double elso;
+	bool elso;
 	double max;
 public:
 	MaximumKereso() {
