4. heti feladatok bővítve.

--- a/feladatok/04.md
+++ b/feladatok/04.md
@@ -84,6 +84,60 @@ string *darabol(string &str, const string &elvalaszto) {
 ```
 </details>
 
+### Anagramma
+
+Írj függvényt, ami két sztringrõl eldönti, hogy anagrammák-e. Két szó anagramma, ha csak a betûk
+sorrendjében különböznek.
+<details>
+ <summary>megoldás:</summary>
+ 
+```cpp
+bool anagramma(string s1, string s2) {
+	// sztringek rendezése
+	for (int meddig = s1.length() - 2; meddig >= 0; meddig--) {
+		for (int i = 0; i <= meddig; i++) {
+			if (s1[i] > s1[i + 1]) {
+				char tmp = s1[i];
+				s1[i] = s1[i + 1];
+				s1[i + 1] = tmp;
+			}
+		}
+	}
+	for (int meddig = s2.length() - 2; meddig >= 0; meddig--) {
+		for (int i = 0; i <= meddig; i++) {
+			if (s2[i] > s2[i + 1]) {
+				char tmp = s2[i];
+				s2[i] = s2[i + 1];
+				s2[i + 1] = tmp;
+			}
+		}
+	}
+
+	// akkor anagrammák, ha rendezve megegyeznek
+	return s1 == s2;
+}
+```
+</details>
+
+### Összefûzõ
+
+Írj függvényt, ami egy sztringekbõl álló tömb elemeit összefûzi úgy, hogy közéjük egy megadott elválasztó
+sztringet tesz.
+<details>
+ <summary>megoldás:</summary>
+ 
+```cpp
+string osszefuz(string *sztringek, int db, const string &elv) {
+	string eredmeny = "";
+	for (int i = 0; i < db - 1; i++) {
+		eredmeny += sztringek[i] + elv;
+	}
+	eredmeny += sztringek[db - 1];
+	return eredmeny;
+}
+```
+</details>
+
 ### Dátum
 
 Készíts osztályt, ami egy dátumot tárol.
