Kakakterkódolás átállítása utf-8-ra.

--- a/feladatok/01.md
+++ b/feladatok/01.md
@@ -1,14 +1,14 @@
-# 1. hét
+# 1. hÃ©t
 
-- ki- és bemenet
-- tömbkezelés
-- referenciák
+- ki- Ã©s bemenet
+- tÃ¶mbkezelÃ©s
+- referenciÃ¡k
 
-### Üdvözlet
+### ÃœdvÃ¶zlet
 
-Írj egy programot, ami kiírja, hogy "Hello BME!"
+Ãrj egy programot, ami kiÃ­rja, hogy "Hello BME!"
 <details>
- <summary>megoldás:</summary>
+ <summary>megoldÃ¡s:</summary>
  
 ```cpp
 #include <iostream>
@@ -23,11 +23,11 @@ int main() {
 ```
 </details>
 
-### Maradékos osztás
+### MaradÃ©kos osztÃ¡s
 
-Írj függvényt, ami a paraméterben kapott osztandó és osztó alapján beállítja a paraméterben kapott hányados és maradék változót!
+Ãrj fÃ¼ggvÃ©nyt, ami a paramÃ©terben kapott osztandÃ³ Ã©s osztÃ³ alapjÃ¡n beÃ¡llÃ­tja a paramÃ©terben kapott hÃ¡nyados Ã©s maradÃ©k vÃ¡ltozÃ³t!
 <details>
- <summary>megoldás:</summary>
+ <summary>megoldÃ¡s:</summary>
  
 ```cpp
 void maradekos_osztas(int osztando, int oszto, int &hanyados, int &maradek){
@@ -37,11 +37,11 @@ void maradekos_osztas(int osztando, int oszto, int &hanyados, int &maradek){
 ```
 </details>
 
-### Szorzótábla
+### SzorzÃ³tÃ¡bla
 
-A program írja ki a példa szerinti formában a szorzótáblát
+A program Ã­rja ki a pÃ©lda szerinti formÃ¡ban a szorzÃ³tÃ¡blÃ¡t
 <details>
- <summary>mûködési példa:</summary>
+ <summary>mÅ±kÃ¶dÃ©si pÃ©lda:</summary>
  
 ```
     1    2    3    4    5    6    7    8    9   10
@@ -57,7 +57,7 @@ A program írja ki a példa szerinti formában a szorzótáblát
 ```
 </details>
 <details>
- <summary>megoldás:</summary>
+ <summary>megoldÃ¡s:</summary>
  
 ```cpp
 for (int i = 1; i <= 10; i++) {
@@ -71,7 +71,7 @@ for (int i = 1; i <= 10; i++) {
 
 ### Doboz
 
-A program kérje be egy négyzetes doboz oldalhosszát, majd rajzolja ki karakterekbõl a minta szerint.
+A program kÃ©rje be egy nÃ©gyzetes doboz oldalhosszÃ¡t, majd rajzolja ki karakterekbÅ‘l a minta szerint.
 <details>
  <summary>minta:</summary>
  
@@ -84,19 +84,19 @@ A program kérje be egy négyzetes doboz oldalhosszát, majd rajzolja ki karakterek
 ```
 </details>
 <details>
- <summary>megoldás:</summary>
+ <summary>megoldÃ¡s:</summary>
  
 ```cpp
-// bekérjük a doboz oldalhosszát
+// bekÃ©rjÃ¼k a doboz oldalhosszÃ¡t
 int oldal;
 cout << "oldalhossz: ";
 cin >> oldal;
 
-// koordináták alapján döntjük el a kiírandó karaktert
+// koordinÃ¡tÃ¡k alapjÃ¡n dÃ¶ntjÃ¼k el a kiÃ­randÃ³ karaktert
 for (int y = 1; y <= oldal; y++) {
 	for (int x = 1; x <= oldal; x++) {
 		if ((x == 1 || x == oldal) && (y == 1 || y == oldal)) {
-			cout << '#'; // char típusú értéket önmagában is ki lehet írni
+			cout << '#'; // char tÃ­pusÃº Ã©rtÃ©ket Ã¶nmagÃ¡ban is ki lehet Ã­rni
 		}
 		else if (x == 1 || x == oldal) {
 			cout << '|';
@@ -116,11 +116,11 @@ for (int y = 1; y <= oldal; y++) {
 ```
 </details>
 
-### Fibonacci tömb
+### Fibonacci tÃ¶mb
 
-Írj függvényt, ami a Fibonacci-sorozat elsõ n elemébõl képzett tömbbel tér vissza. Az n értékét paraméterként kapja meg.
+Ãrj fÃ¼ggvÃ©nyt, ami a Fibonacci-sorozat elsÅ‘ n elemÃ©bÅ‘l kÃ©pzett tÃ¶mbbel tÃ©r vissza. Az n Ã©rtÃ©kÃ©t paramÃ©terkÃ©nt kapja meg.
 <details>
- <summary>megoldás:</summary>
+ <summary>megoldÃ¡s:</summary>
  
 ```cpp
 int *fib(int n) {
@@ -136,46 +136,46 @@ int *fib(int n) {
 ```
 </details>
 
-### Dátum kiíró
+### DÃ¡tum kiÃ­rÃ³
 
-Definiálj egy struktúrát, amiben egy dátum és idõpont adatai vannak:
-év, hónap, nap, óra, perc, másodperc.
-Készíts függvényt, ami ezt kiírja a kövektezõ minta szerint: 2018.01.26. - 8:05:01
+DefiniÃ¡lj egy struktÃºrÃ¡t, amiben egy dÃ¡tum Ã©s idÅ‘pont adatai vannak:
+Ã©v, hÃ³nap, nap, Ã³ra, perc, mÃ¡sodperc.
+KÃ©szÃ­ts fÃ¼ggvÃ©nyt, ami ezt kiÃ­rja a kÃ¶vektezÅ‘ minta szerint: 2018.01.26. - 8:05:01
 <details>
- <summary>megoldás:</summary>
+ <summary>megoldÃ¡s:</summary>
  
 ```cpp
 #include <iostream>
 #include <iomanip>
 
-// dátum és idõ struktúra
+// dÃ¡tum Ã©s idÅ‘ struktÃºra
 struct datum {
 	int ev, honap, nap;
 	int ora, perc, masodperc;
 };
 
-// kiíró függvény
-void datum_kiir(const struct datum &d) { // konstans referencia, mert összetett típus
-	// év kiírása
+// kiÃ­rÃ³ fÃ¼ggvÃ©ny
+void datum_kiir(const struct datum &d) { // konstans referencia, mert Ã¶sszetett tÃ­pus
+	// Ã©v kiÃ­rÃ¡sa
 	cout << d.ev << ".";
-	// hónap és nap kiírása vezetõ nullával
+	// hÃ³nap Ã©s nap kiÃ­rÃ¡sa vezetÅ‘ nullÃ¡val
 	cout << setw(2) << setfill('0') << d.honap << ".";
 	cout << setw(2) << setfill('0') << d.nap << ".";
 
-	// óra kiírása
+	// Ã³ra kiÃ­rÃ¡sa
 	cout << " - " << d.ora;
-	// perc és másodperc kiírása vezetõ nullával
+	// perc Ã©s mÃ¡sodperc kiÃ­rÃ¡sa vezetÅ‘ nullÃ¡val
 	cout << ":" << setw(2) << setfill('0') << d.perc;
 	cout << ":" << setw(2) << setfill('0') << d.masodperc;
 }
 ```
 </details>
 
-### Következõ négyzetszám keresése
+### KÃ¶vetkezÅ‘ nÃ©gyzetszÃ¡m keresÃ©se
 
-Írj egy függvényt, ami a paraméterként kapott négyzetszámot átállítja a következõ négyzetszámra.
+Ãrj egy fÃ¼ggvÃ©nyt, ami a paramÃ©terkÃ©nt kapott nÃ©gyzetszÃ¡mot Ã¡tÃ¡llÃ­tja a kÃ¶vetkezÅ‘ nÃ©gyzetszÃ¡mra.
 <details>
- <summary>megoldás:</summary>
+ <summary>megoldÃ¡s:</summary>
  
 ```cpp
 #include <cmath>
@@ -188,10 +188,10 @@ void kovetkezo_negyzetszam(int &szam) {
 ```
 </details>
 
-### Prímtényezõs felbontás
+### PrÃ­mtÃ©nyezÅ‘s felbontÃ¡s
 
-Írj programot, ami a minta szerint bekér egy számot és kiírja annak prímtényezõs felbontását.
-A kiírt értékek legyenek egymás alá rendezve, de ne legyenek felesleges szóközök! 
+Ãrj programot, ami a minta szerint bekÃ©r egy szÃ¡mot Ã©s kiÃ­rja annak prÃ­mtÃ©nyezÅ‘s felbontÃ¡sÃ¡t.
+A kiÃ­rt Ã©rtÃ©kek legyenek egymÃ¡s alÃ¡ rendezve, de ne legyenek felesleges szÃ³kÃ¶zÃ¶k! 
 <details>
  <summary>minta:</summary>
  
@@ -209,35 +209,35 @@ Irj be egy egesz szamot: 304920
      1|
 ```
 </details><details>
- <summary>megoldás:</summary>
+ <summary>megoldÃ¡s:</summary>
  
 ```cpp
-// szám bekérése
+// szÃ¡m bekÃ©rÃ©se
 int szam;
 cout << "Irj be egy egesz szamot: ";
 cin >> szam;
 
-// hány jegyû a szám?
-int munkapeldany = szam; // másolat, hogy az eredeti érték ne vesszen el
+// hÃ¡ny jegyÅ± a szÃ¡m?
+int munkapeldany = szam; // mÃ¡solat, hogy az eredeti Ã©rtÃ©k ne vesszen el
 int jegyek = 0;
 while (munkapeldany!=0) {
 	jegyek++;
 	munkapeldany /= 10;
 }
 
-// prímtényezõs felbontás kiírása szépen
-int oszto = 2; // ezzel próbáljuk mindig leosztani a számot
+// prÃ­mtÃ©nyezÅ‘s felbontÃ¡s kiÃ­rÃ¡sa szÃ©pen
+int oszto = 2; // ezzel prÃ³bÃ¡ljuk mindig leosztani a szÃ¡mot
 while (szam > 1) {
 	if (szam%oszto == 0) {
-		// ha osztható, akkor kiírjuk a következõ lépcsõfokot
+		// ha oszthatÃ³, akkor kiÃ­rjuk a kÃ¶vetkezÅ‘ lÃ©pcsÅ‘fokot
 		cout << setw(jegyek) << szam << "|" << oszto << endl;
 		szam /= oszto;
 	} else {
-		// ha nem, akkor tovább keresünk
+		// ha nem, akkor tovÃ¡bb keresÃ¼nk
 		oszto++;
 	}
 }
-// utolsó 1-es kiírása
+// utolsÃ³ 1-es kiÃ­rÃ¡sa
 cout << setw(jegyek) << 1 << "|" << endl;
 ```
 </details>
