--- a/feladatok/02.md
+++ b/feladatok/02.md
@@ -1,39 +1,39 @@
-# 2. hét
+# 2. hÃ©t
 
-- alapértelmezett argumentumok
-- függvény túlterhlés
-- sablon függvények
+- alapÃ©rtelmezett argumentumok
+- fÃ¼ggvÃ©ny tÃºlterhlÃ©s
+- sablon fÃ¼ggvÃ©nyek
 
-### Sztringben keresõ függvény
+### Sztringben keresÅ‘ fÃ¼ggvÃ©ny
 
-Írj függvényt, ami sztringben (char*-ban) keres részsztringet.
-A paraméterek: melyik sztringben, mit keressen, hanyadik elõfordulást.
+Ãrj fÃ¼ggvÃ©nyt, ami sztringben (char*-ban) keres rÃ©szsztringet.
+A paramÃ©terek: melyik sztringben, mit keressen, hanyadik elÅ‘fordulÃ¡st.
 
-Találat esetén a találatra mutató pointerrel térjen vissza, különben NULL pointerrel.
+TalÃ¡lat esetÃ©n a talÃ¡latra mutatÃ³ pointerrel tÃ©rjen vissza, kÃ¼lÃ¶nben NULL pointerrel.
 
-Ha nincs megadva, hogy hanyadik elõfordulás kell, akkor az elsõt keresse.
-A sorszámozás szokás szerint 0-ról indul.
+Ha nincs megadva, hogy hanyadik elÅ‘fordulÃ¡s kell, akkor az elsÅ‘t keresse.
+A sorszÃ¡mozÃ¡s szokÃ¡s szerint 0-rÃ³l indul.
 
 <details>
- <summary>megoldás:</summary>
+ <summary>megoldÃ¡s:</summary>
  
 ```cpp
 #include <cstring>
 
 char *keres(char *miben, char *mit, int hanyadik = 0) {
 	while (1) {
-		// keresés...
+		// keresÃ©s...
 		char *talalat = strstr(miben, mit);
 		
-		// ha nincs találat, végeztünk
+		// ha nincs talÃ¡lat, vÃ©geztÃ¼nk
 		if (talalat == NULL)
 			return NULL;
 
-		// ezt a találatot kerestük?
+		// ezt a talÃ¡latot kerestÃ¼k?
 		if (hanyadik == 0)
 			return talalat;
 
-		// korai volt még az öröm...
+		// korai volt mÃ©g az Ã¶rÃ¶m...
 		hanyadik--;
 		miben = talalat + strlen(mit);
 	}
@@ -43,10 +43,10 @@ char *keres(char *miben, char *mit, int hanyadik = 0) {
 
 ### Intervallum
 
-Írj egy függvényt, ami egy valós számokból álló tömböt állít elõ. Paraméterként kapja meg, hogy mettõl meddig
-legyenek benne a számok, és opcionálisan a lépésközt is. Alapértelmezetten egyesével számol.
+Ãrj egy fÃ¼ggvÃ©nyt, ami egy valÃ³s szÃ¡mokbÃ³l Ã¡llÃ³ tÃ¶mbÃ¶t Ã¡llÃ­t elÅ‘. ParamÃ©terkÃ©nt kapja meg, hogy mettÅ‘l meddig
+legyenek benne a szÃ¡mok, Ã©s opcionÃ¡lisan a lÃ©pÃ©skÃ¶zt is. AlapÃ©rtelmezetten egyesÃ©vel szÃ¡mol.
 <details>
- <summary>megoldás:</summary>
+ <summary>megoldÃ¡s:</summary>
  
 ```cpp
 double *intervallum(double mettol, double meddig, double lepeskoz = 1) {
@@ -61,11 +61,11 @@ double *intervallum(double mettol, double meddig, double lepeskoz = 1) {
 ```
 </details>
 
-### Sztringben keresés II.
+### Sztringben keresÃ©s II.
 
-Írj túlterhelt függvényt, ami egyesíti a C-bõl ismert strchr() és strstr() függvényeket!
+Ãrj tÃºlterhelt fÃ¼ggvÃ©nyt, ami egyesÃ­ti a C-bÅ‘l ismert strchr() Ã©s strstr() fÃ¼ggvÃ©nyeket!
 <details>
- <summary>megoldás:</summary>
+ <summary>megoldÃ¡s:</summary>
  
 ```cpp
 #include <cstring>
@@ -79,58 +79,58 @@ char *strsearch(char *miben, char *mit) {
 ```
 </details>
 
-### Hozzáfûzõ
+### HozzÃ¡fÅ±zÅ‘
 
-Írj függvényt, ami egy double típusú tömbhöz fûz hozzá vagy egy darab számot, vagy egy másik tömböt.
-Az elsõ két paraméter legyen az eredeti tömb és annak hossza.
-Egy darab szám hozzáfûzése esetén a hozzáfûzendõ szám legyen a harmadik paraméter.
-Tömb hozzáfûzésése esetén a hozzáfûzendõ tömb és annak hossza legyen a harmadik és negyedik paraméter.
-A függvény foglaljon dinamikusan helyet az új tömbnek, és térjen vissza a kezdõcímével.
+Ãrj fÃ¼ggvÃ©nyt, ami egy double tÃ­pusÃº tÃ¶mbhÃ¶z fÅ±z hozzÃ¡ vagy egy darab szÃ¡mot, vagy egy mÃ¡sik tÃ¶mbÃ¶t.
+Az elsÅ‘ kÃ©t paramÃ©ter legyen az eredeti tÃ¶mb Ã©s annak hossza.
+Egy darab szÃ¡m hozzÃ¡fÅ±zÃ©se esetÃ©n a hozzÃ¡fÅ±zendÅ‘ szÃ¡m legyen a harmadik paramÃ©ter.
+TÃ¶mb hozzÃ¡fÅ±zÃ©sÃ©se esetÃ©n a hozzÃ¡fÅ±zendÅ‘ tÃ¶mb Ã©s annak hossza legyen a harmadik Ã©s negyedik paramÃ©ter.
+A fÃ¼ggvÃ©ny foglaljon dinamikusan helyet az Ãºj tÃ¶mbnek, Ã©s tÃ©rjen vissza a kezdÅ‘cÃ­mÃ©vel.
 
 <details>
- <summary>megoldás:</summary>
+ <summary>megoldÃ¡s:</summary>
  
 ```cpp
-// csak egy szám hozzáfûzése
+// csak egy szÃ¡m hozzÃ¡fÅ±zÃ©se
 double *hozzafuz(double *tomb, int meret, double szam) {
-	// hely foglalása az új tömbnek
+	// hely foglalÃ¡sa az Ãºj tÃ¶mbnek
 	double *uj_tomb = new double[meret + 1];
 
-	// eredeti tömb átmásolása
+	// eredeti tÃ¶mb Ã¡tmÃ¡solÃ¡sa
 	for (int i = 0; i < meret; i++)
 		uj_tomb[i] = tomb[i];
 
-	// kibõvítés az új számmal
+	// kibÅ‘vÃ­tÃ©s az Ãºj szÃ¡mmal
 	uj_tomb[meret] = szam;
 
-	// visszatérés az új tömbbel
+	// visszatÃ©rÃ©s az Ãºj tÃ¶mbbel
 	return uj_tomb;
 }
 
-// egy egész tömb hozzáfûzése
+// egy egÃ©sz tÃ¶mb hozzÃ¡fÅ±zÃ©se
 double *hozzafuz(double *tomb1, int meret1, double *tomb2, int meret2) {
-	// hely foglalása az új tömbnek
+	// hely foglalÃ¡sa az Ãºj tÃ¶mbnek
 	double *uj_tomb = new double[meret1 + meret2];
 
-	// elsõ tömb átmásolása
+	// elsÅ‘ tÃ¶mb Ã¡tmÃ¡solÃ¡sa
 	for (int i = 0; i < meret1; i++)
 		uj_tomb[i] = tomb1[i];
 
-	// második tömb hozzáfûzése
+	// mÃ¡sodik tÃ¶mb hozzÃ¡fÅ±zÃ©se
 	for (int i = 0; i < meret2; i++)
 		uj_tomb[meret1 + i] = tomb2[i];
 
-	// visszatérés az új tömbbel
+	// visszatÃ©rÃ©s az Ãºj tÃ¶mbbel
 	return uj_tomb;
 }
 ```
 </details>
 
-### Tömb elemeinek összege
+### TÃ¶mb elemeinek Ã¶sszege
 
-Írj függvényt, ami bármilyen típusú tömb esetén kiszámolja az elemek összegét!
+Ãrj fÃ¼ggvÃ©nyt, ami bÃ¡rmilyen tÃ­pusÃº tÃ¶mb esetÃ©n kiszÃ¡molja az elemek Ã¶sszegÃ©t!
 <details>
- <summary>megoldás:</summary>
+ <summary>megoldÃ¡s:</summary>
  
 ```cpp
 template<typename Tipus>
@@ -143,16 +143,16 @@ Tipus osszeg(Tipus *tomb, int meret) {
 ```
 </details>
 
-### Tömb rendezése
+### TÃ¶mb rendezÃ©se
 
-Írj függvényt, ami bármilyen típusú tömböt rendez!
+Ãrj fÃ¼ggvÃ©nyt, ami bÃ¡rmilyen tÃ­pusÃº tÃ¶mbÃ¶t rendez!
 <details>
- <summary>megoldás:</summary>
+ <summary>megoldÃ¡s:</summary>
  
 ```cpp
 template<typename Tipus>
 void rendez(Tipus *tomb, int meret) {
-	// buborékrendezés
+	// buborÃ©krendezÃ©s
 	for (int meddig = meret - 2; meddig >= 0; meddig--) {
 		for (int i = 0; i <= meddig; i++) {
 			if (tomb[i] > tomb[i + 1]) {
@@ -167,21 +167,21 @@ void rendez(Tipus *tomb, int meret) {
 ```
 </details>
 
-### Maximumkeresés
+### MaximumkeresÃ©s
 
-Írj túlterhelt template függvényt, ami két tetszõleges típusú szám közül visszatér a nagyobbikkal,
-vagy egy tetszõleges típusú tömb elemei közül visszatér a legnagyobb elemmel.
+Ãrj tÃºlterhelt template fÃ¼ggvÃ©nyt, ami kÃ©t tetszÅ‘leges tÃ­pusÃº szÃ¡m kÃ¶zÃ¼l visszatÃ©r a nagyobbikkal,
+vagy egy tetszÅ‘leges tÃ­pusÃº tÃ¶mb elemei kÃ¶zÃ¼l visszatÃ©r a legnagyobb elemmel.
 <details>
- <summary>megoldás:</summary>
+ <summary>megoldÃ¡s:</summary>
  
 ```cpp
-// két szám közül a nagyobb
+// kÃ©t szÃ¡m kÃ¶zÃ¼l a nagyobb
 template<typename Tipus>
 Tipus max(Tipus a, Tipus b) {
 	return a > b ? a : b;
 }
 
-// tömb legnagyobb eleme
+// tÃ¶mb legnagyobb eleme
 template<typename Tipus>
 Tipus max(Tipus *tomb, int meret) {
 	Tipus maximum = tomb[0];
