--- a/feladatok/03.md
+++ b/feladatok/03.md
@@ -1,20 +1,20 @@
-# 3. hét
+# 3. hÃ©t
 
-- osztályok, objektumok
-- tagváltozók, tagfüggvények
-- public, private elérés
+- osztÃ¡lyok, objektumok
+- tagvÃ¡ltozÃ³k, tagfÃ¼ggvÃ©nyek
+- public, private elÃ©rÃ©s
 - konstruktor, copy-konstruktor, destruktor
-- setter és getter függvények
+- setter Ã©s getter fÃ¼ggvÃ©nyek
 
-### Görgetett átlag
+### GÃ¶rgetett Ã¡tlag
 
-Készíts osztályt, amivel görgetett átlagot lehet számítani.
-- legyen egy tagfüggvénye, amivel hozzá lehet venni egy számot a görgetett átlaghoz
-- legyen egy tagfüggvénye, amivel le lehet kérni az eddig hozzáadott számok átlagát
+KÃ©szÃ­ts osztÃ¡lyt, amivel gÃ¶rgetett Ã¡tlagot lehet szÃ¡mÃ­tani.
+- legyen egy tagfÃ¼ggvÃ©nye, amivel hozzÃ¡ lehet venni egy szÃ¡mot a gÃ¶rgetett Ã¡tlaghoz
+- legyen egy tagfÃ¼ggvÃ©nye, amivel le lehet kÃ©rni az eddig hozzÃ¡adott szÃ¡mok Ã¡tlagÃ¡t
 
-Tipp: nem szükséges tömbben eltárolni a hozzáadott adatokat.
+Tipp: nem szÃ¼ksÃ©ges tÃ¶mbben eltÃ¡rolni a hozzÃ¡adott adatokat.
 <details>
- <summary>megoldás:</summary>
+ <summary>megoldÃ¡s:</summary>
  
 ```cpp
 class GorgetettAtlag {
@@ -39,11 +39,11 @@ public:
 ```
 </details>
 
-### Görgetett maximum
+### GÃ¶rgetett maximum
 
-Az elõzõ feladathoz hasonló, de ne a számok átlagát, hanem maximumát számolja.
+Az elÅ‘zÅ‘ feladathoz hasonlÃ³, de ne a szÃ¡mok Ã¡tlagÃ¡t, hanem maximumÃ¡t szÃ¡molja.
 <details>
- <summary>megoldás:</summary>
+ <summary>megoldÃ¡s:</summary>
  
 ```cpp
 class MaximumKereso {
@@ -72,51 +72,51 @@ public:
 ```
 </details>
 
-### Racionális szám
+### RacionÃ¡lis szÃ¡m
 
-Készíts osztályt, ami racionális számot valósít meg.
-- legyen számláló és nevezõ privát adattagja
-- legyen set és get tagfüggvénye ezek eléréséhez
-- tartalmazzon alapértelmezett konstruktort, ami a 0 értékû számot hozza létre
-- tartalmazzon konstruktort, amivel a számláló és nevezõ megadható
-- tartalmazzon konstruktort, amivel egy double típusú szám adható meg, amit csak 4 tizedes jegyig vesz figyelembe
-(pl: 3.141592 esetén a tört értéke legyen 31416/10000)
-- legyen egy tagfüggvénye, ami kiírja törtvonalas alakban (pl: 3/4)
-- legyen egy tagfüggvénye, ami visszaadja a tört értékét double típusban
-- legyen egy tagfüggvénye, ami hozzáad egy másik törtet
-- legyen egy tagfüggvénye, ami megszorozza egy másik törttel
-- legyen egy tagfüggvénye, ami egyszerûsíti a törtet
+KÃ©szÃ­ts osztÃ¡lyt, ami racionÃ¡lis szÃ¡mot valÃ³sÃ­t meg.
+- legyen szÃ¡mlÃ¡lÃ³ Ã©s nevezÅ‘ privÃ¡t adattagja
+- legyen set Ã©s get tagfÃ¼ggvÃ©nye ezek elÃ©rÃ©sÃ©hez
+- tartalmazzon alapÃ©rtelmezett konstruktort, ami a 0 Ã©rtÃ©kÅ± szÃ¡mot hozza lÃ©tre
+- tartalmazzon konstruktort, amivel a szÃ¡mlÃ¡lÃ³ Ã©s nevezÅ‘ megadhatÃ³
+- tartalmazzon konstruktort, amivel egy double tÃ­pusÃº szÃ¡m adhatÃ³ meg, amit csak 4 tizedes jegyig vesz figyelembe
+(pl: 3.141592 esetÃ©n a tÃ¶rt Ã©rtÃ©ke legyen 31416/10000)
+- legyen egy tagfÃ¼ggvÃ©nye, ami kiÃ­rja tÃ¶rtvonalas alakban (pl: 3/4)
+- legyen egy tagfÃ¼ggvÃ©nye, ami visszaadja a tÃ¶rt Ã©rtÃ©kÃ©t double tÃ­pusban
+- legyen egy tagfÃ¼ggvÃ©nye, ami hozzÃ¡ad egy mÃ¡sik tÃ¶rtet
+- legyen egy tagfÃ¼ggvÃ©nye, ami megszorozza egy mÃ¡sik tÃ¶rttel
+- legyen egy tagfÃ¼ggvÃ©nye, ami egyszerÅ±sÃ­ti a tÃ¶rtet
 
 <details>
- <summary>megoldás:</summary>
+ <summary>megoldÃ¡s:</summary>
  
 ```cpp
 class Racionalis {
 private:
-	// számláló és nevezõ adattagok
+	// szÃ¡mlÃ¡lÃ³ Ã©s nevezÅ‘ adattagok
 	int szamlalo, nevezo;
 	
 public:
-	// alapértelmezett konstruktor: nulla
+	// alapÃ©rtelmezett konstruktor: nulla
 	Racionalis() {
 		szamlalo = 0;
 		nevezo = 1;
 	}
 
-	// konstruktor, amivel megadható a számláló és a nevezõ
+	// konstruktor, amivel megadhatÃ³ a szÃ¡mlÃ¡lÃ³ Ã©s a nevezÅ‘
 	Racionalis(int szamlalo, int nevezo) {
 		this->szamlalo = szamlalo;
 		this->nevezo = nevezo;
 	}
 
-	// konstruktor, amivel double típusból lehet létrehozni 4 tizedesjegyig
+	// konstruktor, amivel double tÃ­pusbÃ³l lehet lÃ©trehozni 4 tizedesjegyig
 	Racionalis(double szam) {
 		szamlalo = round(szam * 10000); // #include <cmath> is kell!
 		nevezo = 10000;
 	}
 
-	// számláló és nevezõ setter és getter
-	int getSzamlalo() const { // konstans függvényekre is kell figyelni!!!
+	// szÃ¡mlÃ¡lÃ³ Ã©s nevezÅ‘ setter Ã©s getter
+	int getSzamlalo() const { // konstans fÃ¼ggvÃ©nyekre is kell figyelni!!!
 		return szamlalo;
 	}
 	int getNevezo() const {
@@ -129,32 +129,32 @@ public:
 		this->nevezo = nevezo;
 	}
 
-	// kiíró
+	// kiÃ­rÃ³
 	void kiir() const {
 		cout << szamlalo << "/" << nevezo << endl;
 	}
 
-	// érték double típusban
+	// Ã©rtÃ©k double tÃ­pusban
 	double ertek() const {
 		return (double)szamlalo/nevezo;
 	}
 
-	// másik tört hozzáadása
+	// mÃ¡sik tÃ¶rt hozzÃ¡adÃ¡sa
 	void hozzaad(const Racionalis &masik) { // konstans referencia!!!
 		int uj_szamlalo = szamlalo*masik.nevezo + masik.szamlalo*nevezo;
 		szamlalo = uj_szamlalo;
 		nevezo *= masik.nevezo;
 	}
 
-	// szorzás másik törttel
+	// szorzÃ¡s mÃ¡sik tÃ¶rttel
 	void megszoroz(const Racionalis &masik) {
 		szamlalo *= masik.szamlalo;
 		nevezo *= masik.nevezo;
 	}
 	
-	// tört egyszerûsítése
+	// tÃ¶rt egyszerÅ±sÃ­tÃ©se
 	void egyszerusit() {
-		// LNKO számítás euklideszi algoritmussal
+		// LNKO szÃ¡mÃ­tÃ¡s euklideszi algoritmussal
 		int a = szamlalo;
 		int b = nevezo;
 		while (a != b) {
@@ -164,7 +164,7 @@ public:
 				b -= a;
 		}
 
-		// számláló és nevezõ leosztása LNKO-val
+		// szÃ¡mlÃ¡lÃ³ Ã©s nevezÅ‘ leosztÃ¡sa LNKO-val
 		szamlalo /= a;
 		nevezo /= b;
 	}
@@ -172,50 +172,50 @@ public:
 ```
 </details>
 
-### Komplex szám
+### Komplex szÃ¡m
 
-Készíts osztályt, ami komplex számot reprezentál.
-- tárolja a szám valós és képzetes résézt
-- legyen alapértelmezett konstruktora, ami a nullát hozza létre
-- legyen konstruktora, ami valós számból hozza létre
-- legyen konstruktora, amivel megadható a valós és a képzetes rész
-- tagváltozóinak legyenek setter és getter függvényei
-- legyenek getFi, getR, setFi, setR tagfüggvényei, amivel trigonometrikus alakban kezelhetõk (fí a szög, r a hossz)
-- legyen kiíró tagfüggvénye
-- legyen konjugáló tagfüggvénye
-- legyen tagfüggvénye, ami egy másik komplex számot ad hozzá
-- legyen tagfüggvénye, ami egy másik komplex számmal megszorozza
-- legyen tagfüggvénye, ami egy másik komplex számmal leosztja
-- legyen tagfüggvénye, ami tetszõleges valós hatványra emeli
+KÃ©szÃ­ts osztÃ¡lyt, ami komplex szÃ¡mot reprezentÃ¡l.
+- tÃ¡rolja a szÃ¡m valÃ³s Ã©s kÃ©pzetes rÃ©sÃ©zt
+- legyen alapÃ©rtelmezett konstruktora, ami a nullÃ¡t hozza lÃ©tre
+- legyen konstruktora, ami valÃ³s szÃ¡mbÃ³l hozza lÃ©tre
+- legyen konstruktora, amivel megadhatÃ³ a valÃ³s Ã©s a kÃ©pzetes rÃ©sz
+- tagvÃ¡ltozÃ³inak legyenek setter Ã©s getter fÃ¼ggvÃ©nyei
+- legyenek getFi, getR, setFi, setR tagfÃ¼ggvÃ©nyei, amivel trigonometrikus alakban kezelhetÅ‘k (fÃ­ a szÃ¶g, r a hossz)
+- legyen kiÃ­rÃ³ tagfÃ¼ggvÃ©nye
+- legyen konjugÃ¡lÃ³ tagfÃ¼ggvÃ©nye
+- legyen tagfÃ¼ggvÃ©nye, ami egy mÃ¡sik komplex szÃ¡mot ad hozzÃ¡
+- legyen tagfÃ¼ggvÃ©nye, ami egy mÃ¡sik komplex szÃ¡mmal megszorozza
+- legyen tagfÃ¼ggvÃ©nye, ami egy mÃ¡sik komplex szÃ¡mmal leosztja
+- legyen tagfÃ¼ggvÃ©nye, ami tetszÅ‘leges valÃ³s hatvÃ¡nyra emeli
 <details>
- <summary>megoldás:</summary>
+ <summary>megoldÃ¡s:</summary>
  
 ```cpp
 class Komplex {
 private:
-	// valós és képzetes rész
+	// valÃ³s Ã©s kÃ©pzetes rÃ©sz
 	double re, im;
 
 public:
-	// alapértelmezett konstruktor: nulla
+	// alapÃ©rtelmezett konstruktor: nulla
 	Komplex() {
 		re = 0;
 		im = 0;
 	}
 
-	// konstruktor valós számból
+	// konstruktor valÃ³s szÃ¡mbÃ³l
 	Komplex(double szam) {
 		re = szam;
 		im = 0;
 	}
 
-	// konstruktor valós és képzetes részbõl
+	// konstruktor valÃ³s Ã©s kÃ©pzetes rÃ©szbÅ‘l
 	Komplex(double re, double im) {
 		this->re = re;
 		this->im = im;
 	}
 
-	// valós és képzetes rész setter és getter függvényei
+	// valÃ³s Ã©s kÃ©pzetes rÃ©sz setter Ã©s getter fÃ¼ggvÃ©nyei
 	double getRe() const {
 		return re;
 	}
@@ -232,9 +232,9 @@ public:
 		this->im = im;
 	}
 
-	// trigonometrikus alak setter és getter függvényei
+	// trigonometrikus alak setter Ã©s getter fÃ¼ggvÃ©nyei
 	double getFi() const {
-		return atan2(im, re); // gondolkodnivaló: miért atan2? miért nem jó az atan(im/re)?
+		return atan2(im, re); // gondolkodnivalÃ³: miÃ©rt atan2? miÃ©rt nem jÃ³ az atan(im/re)?
 	}
 
 	double getR() const {
@@ -253,32 +253,32 @@ public:
 		im *= szorzo;
 	}
 
-	// kiíró függvény
+	// kiÃ­rÃ³ fÃ¼ggvÃ©ny
 	void kiir() const {
 		cout << re << "+" << im << "i" << endl;
 	}
 
-	// konjugáló függvény
+	// konjugÃ¡lÃ³ fÃ¼ggvÃ©ny
 	void konjugal() {
 		im *= -1;
 	}
 
-	// másik szám hozzáadása
+	// mÃ¡sik szÃ¡m hozzÃ¡adÃ¡sa
 	void hozzaad(const Komplex &masik) { // konstans referencia!!!
 		re += masik.re;
 		im += masik.im;
 	}
 
-	// másik számmal megszorzás
+	// mÃ¡sik szÃ¡mmal megszorzÃ¡s
 	void szoroz(const Komplex &masik) {
-		Komplex szorzat; // munkaváltozat is kell
+		Komplex szorzat; // munkavÃ¡ltozat is kell
 		szorzat.setR(getR()*masik.getR());
 		szorzat.setFi(getFi() + masik.getFi());
 		re = szorzat.re;
 		im = szorzat.im;
 	}
 
-	// másik számmal elosztás
+	// mÃ¡sik szÃ¡mmal elosztÃ¡s
 	void oszt(const Komplex &masik) {
 		Komplex szorzat;
 		szorzat.setR(getR() / masik.getR());
@@ -287,9 +287,9 @@ public:
 		im = szorzat.im;
 	}
 
-	// hatványozás
+	// hatvÃ¡nyozÃ¡s
 	void oszt(double kitevo) {
-		// itt nem kell munkaváltozat
+		// itt nem kell munkavÃ¡ltozat
 		setR(pow(getR(), kitevo));
 		setFi(getFi()*kitevo);
 	}
@@ -297,58 +297,58 @@ public:
 ```
 </details>
 
-### Mozgóátlag
+### MozgÃ³Ã¡tlag
 
-Készíts osztályt, ami mozgóátlagot számít. A mozgóátlaghoz mindig hozzá lehet adni elemeket, de csak az utolsó
-n elem átlagát számolja. Az elemek tárolása tömb segítségével valósítható meg. A tömb kezdetben legyen nullákkal
-feltöltve.
-- legyen konstruktora, amivel megadható, hogy hány elem átlagát számítsa.
-- legyen egy tagfüggvénye, amivel egy double típusú szám tehetõ be az átlagszámítóba
-- legyen egy tagfüggvénye, ami visszatér az utolsó betett n elem átlagával (n a konstruktorban lett megadva)
-- legyen másoló konstruktora és destruktora a dinamikusan foglalt tömb miatt
+KÃ©szÃ­ts osztÃ¡lyt, ami mozgÃ³Ã¡tlagot szÃ¡mÃ­t. A mozgÃ³Ã¡tlaghoz mindig hozzÃ¡ lehet adni elemeket, de csak az utolsÃ³
+n elem Ã¡tlagÃ¡t szÃ¡molja. Az elemek tÃ¡rolÃ¡sa tÃ¶mb segÃ­tsÃ©gÃ©vel valÃ³sÃ­thatÃ³ meg. A tÃ¶mb kezdetben legyen nullÃ¡kkal
+feltÃ¶ltve.
+- legyen konstruktora, amivel megadhatÃ³, hogy hÃ¡ny elem Ã¡tlagÃ¡t szÃ¡mÃ­tsa.
+- legyen egy tagfÃ¼ggvÃ©nye, amivel egy double tÃ­pusÃº szÃ¡m tehetÅ‘ be az Ã¡tlagszÃ¡mÃ­tÃ³ba
+- legyen egy tagfÃ¼ggvÃ©nye, ami visszatÃ©r az utolsÃ³ betett n elem Ã¡tlagÃ¡val (n a konstruktorban lett megadva)
+- legyen mÃ¡solÃ³ konstruktora Ã©s destruktora a dinamikusan foglalt tÃ¶mb miatt
 
 <details>
- <summary>megoldás:</summary>
+ <summary>megoldÃ¡s:</summary>
  
 ```cpp
 class Mozgoatlag {
 private:
-	// tárolni kell az utolsó n elemet
+	// tÃ¡rolni kell az utolsÃ³ n elemet
 	int meret;
 	double *elemek;
 public:
 	// konstruktor
 	Mozgoatlag(int n) {
-		// tömb foglalása az utolsó n elemnek
+		// tÃ¶mb foglalÃ¡sa az utolsÃ³ n elemnek
 		meret = n;
 		elemek = new double[n];
 		
-		// feltöltés nullával
+		// feltÃ¶ltÃ©s nullÃ¡val
 		for (int i = 0; i < n; i++)
 			elemek[i] = 0;
 	}
 
-	// másoló konstruktor
+	// mÃ¡solÃ³ konstruktor
 	Mozgoatlag(const Mozgoatlag &eredeti) {
 		meret = eredeti.meret;
 		
-		// az elemeknél nem elég a pointert átmásolni, új tömböt kell foglalni
+		// az elemeknÃ©l nem elÃ©g a pointert Ã¡tmÃ¡solni, Ãºj tÃ¶mbÃ¶t kell foglalni
 		elemek = new double[meret];
 		for (int i = 0; i < meret; i++)
 			elemek[i] = eredeti.elemek[i];
 	}
 
-	// elem hozzáadása
+	// elem hozzÃ¡adÃ¡sa
 	void elem_hozzaad(double uj_elem) {
-		// elemek léptetése a tömbben
+		// elemek lÃ©ptetÃ©se a tÃ¶mbben
 		for (int i = meret - 1; i > 0; i--)
 			elemek[i] = elemek[i - 1];
 
-		// új elem beírása a legelsõ helyre
+		// Ãºj elem beÃ­rÃ¡sa a legelsÅ‘ helyre
 		elemek[0] = uj_elem;
 	}
 
-	// átlagszámítás
+	// Ã¡tlagszÃ¡mÃ­tÃ¡s
 	double atlag() const {
 		double osszeg = 0;
 		for (int i = 0; i < meret; i++)
@@ -358,7 +358,7 @@ public:
 
 	// destruktor
 	~Mozgoatlag() {
-		// tömb felszabadítása
+		// tÃ¶mb felszabadÃ­tÃ¡sa
 		delete[] elemek;
 	}
 };
@@ -367,30 +367,30 @@ public:
 
 ### Lista
 
-Készíts osztályt, ami valós számokat tárol egy tömbben.
-- legyen konstuktora, amivel megadott méretû tömböt hoz létre és feltölti nullákkal
-- legyen konstuktora, ami már létezõ tömbbõl hozza létre a listát
+KÃ©szÃ­ts osztÃ¡lyt, ami valÃ³s szÃ¡mokat tÃ¡rol egy tÃ¶mbben.
+- legyen konstuktora, amivel megadott mÃ©retÅ± tÃ¶mbÃ¶t hoz lÃ©tre Ã©s feltÃ¶lti nullÃ¡kkal
+- legyen konstuktora, ami mÃ¡r lÃ©tezÅ‘ tÃ¶mbbÅ‘l hozza lÃ©tre a listÃ¡t
 - legyen copy-konstruktora
-- legyen getElem(index) függvénye, ami adott indexû elemmel tér vissza
-- legyen setElem(index, érték) függvénye, ami adott indexû elem értékét írja felül
-- legyen kiíró függvénye
-- legyen getMeret() függvénye, ami a lista elemszámával tér vissza
-- legyen setMeret() átméretezõ függvénye, ami átméretezi a tömböt: ha rövidül, az elsõ elemek megmaradnak,
-ha hosszabb lesz, nullákkal lesz kipótolva
-- legyen beszúró függvénye, ami vagy egy számot szúr be tetszõleges indexû elem elé, vagy egy másik lista elemeit
-- legyen hozzáfûzõ függvénye, ami a lista végéhez fûz egy számot vagy másik listát
+- legyen getElem(index) fÃ¼ggvÃ©nye, ami adott indexÅ± elemmel tÃ©r vissza
+- legyen setElem(index, Ã©rtÃ©k) fÃ¼ggvÃ©nye, ami adott indexÅ± elem Ã©rtÃ©kÃ©t Ã­rja felÃ¼l
+- legyen kiÃ­rÃ³ fÃ¼ggvÃ©nye
+- legyen getMeret() fÃ¼ggvÃ©nye, ami a lista elemszÃ¡mÃ¡val tÃ©r vissza
+- legyen setMeret() Ã¡tmÃ©retezÅ‘ fÃ¼ggvÃ©nye, ami Ã¡tmÃ©retezi a tÃ¶mbÃ¶t: ha rÃ¶vidÃ¼l, az elsÅ‘ elemek megmaradnak,
+ha hosszabb lesz, nullÃ¡kkal lesz kipÃ³tolva
+- legyen beszÃºrÃ³ fÃ¼ggvÃ©nye, ami vagy egy szÃ¡mot szÃºr be tetszÅ‘leges indexÅ± elem elÃ©, vagy egy mÃ¡sik lista elemeit
+- legyen hozzÃ¡fÅ±zÅ‘ fÃ¼ggvÃ©nye, ami a lista vÃ©gÃ©hez fÅ±z egy szÃ¡mot vagy mÃ¡sik listÃ¡t
 - legyen destruktora
 <details>
- <summary>megoldás:</summary>
+ <summary>megoldÃ¡s:</summary>
  
 ```cpp
 class Lista {
 private:
-	// tárolt elemek tömbje és darabszáma
+	// tÃ¡rolt elemek tÃ¶mbje Ã©s darabszÃ¡ma
 	int meret;
 	double *elemek;
 public:
-	// konstruktor, ami nullákkal tölti fel a listát
+	// konstruktor, ami nullÃ¡kkal tÃ¶lti fel a listÃ¡t
 	Lista(int n) {
 		meret = n;
 		elemek = new double[meret];
@@ -398,7 +398,7 @@ public:
 			elemek[i] = 0;
 	}
 
-	// konstruktor, ami tömbbõl hozza létre a listát
+	// konstruktor, ami tÃ¶mbbÅ‘l hozza lÃ©tre a listÃ¡t
 	Lista(double *tomb, int n) {
 		meret = n;
 		elemek = new double[meret];
@@ -414,17 +414,17 @@ public:
 			elemek[i] = eredeti.elemek[i];
 	}
 
-	// elem lekérdezése
-	double getElem(int i) const { // const függvény !!!
+	// elem lekÃ©rdezÃ©se
+	double getElem(int i) const { // const fÃ¼ggvÃ©ny !!!
 		return elemek[i];
 	}
 
-	// elem felülírása
+	// elem felÃ¼lÃ­rÃ¡sa
 	void setElem(int i, double ertek) {
 		elemek[i] = ertek;
 	}
 
-	// kiírás
+	// kiÃ­rÃ¡s
 	void kiir() const {
 		for (int i = 0; i < meret - 1; i++) {
 			cout << elemek[i] << "; ";
@@ -432,58 +432,58 @@ public:
 		cout << elemek[meret - 1] << endl;
 	}
 
-	// méret lekérése
+	// mÃ©ret lekÃ©rÃ©se
 	int getMeret() const {
 		return meret;
 	}
 
-	// átméretezés
+	// Ã¡tmÃ©retezÃ©s
 	void setMeret(int uj_meret) {
 		double *uj_tomb = new double[uj_meret];
 		for (int i = 0; i < uj_meret; i++) {
-			// régi elem átmásolása, vagy nullával kipótlás
+			// rÃ©gi elem Ã¡tmÃ¡solÃ¡sa, vagy nullÃ¡val kipÃ³tlÃ¡s
 			if (i < meret)
 				uj_tomb[i] = elemek[i];
 			else
 				uj_tomb[i] = 0;
 		}
 
-		// felszabadítás, és tömb kicserélése
+		// felszabadÃ­tÃ¡s, Ã©s tÃ¶mb kicserÃ©lÃ©se
 		delete[] elemek;
 		elemek = uj_tomb;
 		meret = uj_meret;
 	}
 
-	// szám beszúrása bárhova
+	// szÃ¡m beszÃºrÃ¡sa bÃ¡rhova
 	void beszur(double uj_elem, int index) {
-		// helycsinálás az új elemnek
+		// helycsinÃ¡lÃ¡s az Ãºj elemnek
 		setMeret(meret + 1);
 
-		// elemek eltolása
+		// elemek eltolÃ¡sa
 		for (int i = meret - 1; i > index; i--)
 			elemek[i] = elemek[i - 1];
 
-		// új elem beírása
+		// Ãºj elem beÃ­rÃ¡sa
 		elemek[index] = uj_elem;
 	}
 
-	// lista beszúrása bárhova
+	// lista beszÃºrÃ¡sa bÃ¡rhova
 	void beszur(const Lista &beszurando, int index) {
-		/* Nagyon nem optimális megoldás, mert db-szor foglalja újra a tömböt,
-		   de legalább két sorból megvan. 
+		/* Nagyon nem optimÃ¡lis megoldÃ¡s, mert db-szor foglalja Ãºjra a tÃ¶mbÃ¶t,
+		   de legalÃ¡bb kÃ©t sorbÃ³l megvan. 
 		   
-		   Szorgalmi: egy újrafoglalással megvalósítani ezt a függvényt.
+		   Szorgalmi: egy ÃºjrafoglalÃ¡ssal megvalÃ³sÃ­tani ezt a fÃ¼ggvÃ©nyt.
 		*/
 		for (int i = 0; i < beszurando.getMeret(); i++)
 			beszur(beszurando.getElem(i), index + i);
 	}
 
-	// szám hozzáfûzése
+	// szÃ¡m hozzÃ¡fÅ±zÃ©se
 	void hozzafuz(double uj_elem) {
 		beszur(uj_elem, meret);
 	}
 
-	// lista hozzáfûzése
+	// lista hozzÃ¡fÅ±zÃ©se
 	void hozzafuz(const Lista &hozzafuzendo) {
 		beszur(hozzafuzendo, meret);
 	}
