--- a/feladatok/04.md
+++ b/feladatok/04.md
@@ -1,30 +1,30 @@
-# 4. hét
+# 4. hÃ©t
 
-- sztringkezelés
+- sztringkezelÃ©s
 
-### Sztring elejének vizsgálata
+### Sztring elejÃ©nek vizsgÃ¡lata
 
-Írj függvényt, ami megvizsgálja, hogy egy sztring egy másik sztringgel kezdõdik-e.
+Ãrj fÃ¼ggvÃ©nyt, ami megvizsgÃ¡lja, hogy egy sztring egy mÃ¡sik sztringgel kezdÅ‘dik-e.
 <details>
- <summary>megoldás:</summary>
+ <summary>megoldÃ¡s:</summary>
  
 ```cpp
 bool eleje(const string &ez, const string &ezzel_kezdodik) {
 	return ez.substr(0, ezzel_kezdodik.size()) == ezzel_kezdodik;
 }
 
-// másik megoldás
+// mÃ¡sik megoldÃ¡s
 bool eleje2(const string &ez, const string &ezzel_kezdodik) {
 	return ez.find(ezzel_kezdodik)==0;
 }
 ```
 </details>
 
-### Elõfordulások száma
+### ElÅ‘fordulÃ¡sok szÃ¡ma
 
-Írj függvényt, ami megszámolja, hogy egy sztringben hányszor szerepel egy másik sztring.
+Ãrj fÃ¼ggvÃ©nyt, ami megszÃ¡molja, hogy egy sztringben hÃ¡nyszor szerepel egy mÃ¡sik sztring.
 <details>
- <summary>megoldás:</summary>
+ <summary>megoldÃ¡s:</summary>
  
 ```cpp
 int hanyszor(const string &s, const string &keresett) {
@@ -39,12 +39,12 @@ int hanyszor(const string &s, const string &keresett) {
 ```
 </details>
 
-### Keresés és csere
+### KeresÃ©s Ã©s csere
 
-Írj függvényt, ami egy sztringben egy keresési kulcsszó összes elõfordulását kicseréli egy másik sztringre.
-A függvény az eredeti sztringet módosítsa!
+Ãrj fÃ¼ggvÃ©nyt, ami egy sztringben egy keresÃ©si kulcsszÃ³ Ã¶sszes elÅ‘fordulÃ¡sÃ¡t kicserÃ©li egy mÃ¡sik sztringre.
+A fÃ¼ggvÃ©ny az eredeti sztringet mÃ³dosÃ­tsa!
 <details>
- <summary>megoldás:</summary>
+ <summary>megoldÃ¡s:</summary>
  
 ```cpp
 void csere(string &ebben, const string &ezt, const string &erre) {
@@ -58,18 +58,18 @@ void csere(string &ebben, const string &ezt, const string &erre) {
 
 ### Darabol
 
-Írj függvényt, ami egy sztringet adott elválasztó-részsztringek mentén feldarabol.
-A darabokat tegye egy dinamikusan foglalt tömbbe, aminek kezdõcímével térjen vissza.
+Ãrj fÃ¼ggvÃ©nyt, ami egy sztringet adott elvÃ¡lasztÃ³-rÃ©szsztringek mentÃ©n feldarabol.
+A darabokat tegye egy dinamikusan foglalt tÃ¶mbbe, aminek kezdÅ‘cÃ­mÃ©vel tÃ©rjen vissza.
 <details>
- <summary>megoldás:</summary>
+ <summary>megoldÃ¡s:</summary>
  
 ```cpp
 string *darabol(string &str, const string &elvalaszto) {
-	// helyfoglalás a sztringeknek
+	// helyfoglalÃ¡s a sztringeknek
 	int n = hanyszor(str, elvalaszto)+1;
 	string *darabok = new string[n];
 
-	// darabolás
+	// darabolÃ¡s
 	int honnan = 0;
 	for (int i = 0; i < n; i++) {
 		int talalat = str.find(elvalaszto, honnan);
@@ -86,14 +86,14 @@ string *darabol(string &str, const string &elvalaszto) {
 
 ### Anagramma
 
-Írj függvényt, ami két sztringrõl eldönti, hogy anagrammák-e. Két szó anagramma, ha csak a betûk
-sorrendjében különböznek.
+Ãrj fÃ¼ggvÃ©nyt, ami kÃ©t sztringrÅ‘l eldÃ¶nti, hogy anagrammÃ¡k-e. KÃ©t szÃ³ anagramma, ha csak a betÅ±k
+sorrendjÃ©ben kÃ¼lÃ¶nbÃ¶znek.
 <details>
- <summary>megoldás:</summary>
+ <summary>megoldÃ¡s:</summary>
  
 ```cpp
 bool anagramma(string s1, string s2) {
-	// sztringek rendezése
+	// sztringek rendezÃ©se
 	for (int meddig = s1.length() - 2; meddig >= 0; meddig--) {
 		for (int i = 0; i <= meddig; i++) {
 			if (s1[i] > s1[i + 1]) {
@@ -113,18 +113,18 @@ bool anagramma(string s1, string s2) {
 		}
 	}
 
-	// akkor anagrammák, ha rendezve megegyeznek
+	// akkor anagrammÃ¡k, ha rendezve megegyeznek
 	return s1 == s2;
 }
 ```
 </details>
 
-### Összefûzõ
+### Ã–sszefÅ±zÅ‘
 
-Írj függvényt, ami egy sztringekbõl álló tömb elemeit összefûzi úgy, hogy közéjük egy megadott elválasztó
+Ãrj fÃ¼ggvÃ©nyt, ami egy sztringekbÅ‘l Ã¡llÃ³ tÃ¶mb elemeit Ã¶sszefÅ±zi Ãºgy, hogy kÃ¶zÃ©jÃ¼k egy megadott elvÃ¡lasztÃ³
 sztringet tesz.
 <details>
- <summary>megoldás:</summary>
+ <summary>megoldÃ¡s:</summary>
  
 ```cpp
 string osszefuz(string *sztringek, int db, const string &elv) {
@@ -138,14 +138,14 @@ string osszefuz(string *sztringek, int db, const string &elv) {
 ```
 </details>
 
-### Dátum
+### DÃ¡tum
 
-Készíts osztályt, ami egy dátumot tárol.
-- legyen év, hónap és nap adattagja 
-- legyen konstruktora, ami sztringet képes értelmezni, pl: "2018.01.27."
-- legyen kiíró függvénye, ami ugyanilyen formában kiírja a dátumot
+KÃ©szÃ­ts osztÃ¡lyt, ami egy dÃ¡tumot tÃ¡rol.
+- legyen Ã©v, hÃ³nap Ã©s nap adattagja 
+- legyen konstruktora, ami sztringet kÃ©pes Ã©rtelmezni, pl: "2018.01.27."
+- legyen kiÃ­rÃ³ fÃ¼ggvÃ©nye, ami ugyanilyen formÃ¡ban kiÃ­rja a dÃ¡tumot
 <details>
- <summary>megoldás:</summary>
+ <summary>megoldÃ¡s:</summary>
  
 ```cpp
 class Datum {
@@ -167,39 +167,39 @@ public:
 ```
 </details>
 
-### Caesar-kód
+### Caesar-kÃ³d
 
-Írj egy függvényt, ami egy sztringet caesar-kódol.
-A függvény argumentumban kapja meg, hogy hány betûvel kell elforgatni az ábécét.
-A függvény csak a kis- és nagybetûket kódolja, a többi karakter maradjon változatlan!
-A függvény az eredeti sztringet módosítsa, nem kell külön célsztringbe másolni!
-A függvény értelmezze a pozitív és negatív elforgatást, bármekkora számokkal.
+Ãrj egy fÃ¼ggvÃ©nyt, ami egy sztringet caesar-kÃ³dol.
+A fÃ¼ggvÃ©ny argumentumban kapja meg, hogy hÃ¡ny betÅ±vel kell elforgatni az Ã¡bÃ©cÃ©t.
+A fÃ¼ggvÃ©ny csak a kis- Ã©s nagybetÅ±ket kÃ³dolja, a tÃ¶bbi karakter maradjon vÃ¡ltozatlan!
+A fÃ¼ggvÃ©ny az eredeti sztringet mÃ³dosÃ­tsa, nem kell kÃ¼lÃ¶n cÃ©lsztringbe mÃ¡solni!
+A fÃ¼ggvÃ©ny Ã©rtelmezze a pozitÃ­v Ã©s negatÃ­v elforgatÃ¡st, bÃ¡rmekkora szÃ¡mokkal.
 
 <details>
- <summary>megoldás:</summary>
+ <summary>megoldÃ¡s:</summary>
  
 ```cpp
 void caesar(string &str, int n) {
-	// a forgatást normalizáljuk, hogy -25...+25 tartományban legyen
+	// a forgatÃ¡st normalizÃ¡ljuk, hogy -25...+25 tartomÃ¡nyban legyen
 	n = n % ('z' - 'a' + 1);
 
-	// a negatív forgatást pozitívval helyettesítjük, pl -1 -> +25
+	// a negatÃ­v forgatÃ¡st pozitÃ­vval helyettesÃ­tjÃ¼k, pl -1 -> +25
 	if (n < 0)
 		n += 'z' - 'a' + 1;
 
-	// karakterenként kódolunk
+	// karakterenkÃ©nt kÃ³dolunk
 	for (int i = 0; i < str.length(); i++) {
 
-		// itt tároljuk a kódolt karaktert
-		int ch = str[i] + n; // azért int, mert a char túl szûk értelmezési tartományú
+		// itt tÃ¡roljuk a kÃ³dolt karaktert
+		int ch = str[i] + n; // azÃ©rt int, mert a char tÃºl szÅ±k Ã©rtelmezÃ©si tartomÃ¡nyÃº
 
-		// kisbetû kódolása
+		// kisbetÅ± kÃ³dolÃ¡sa
 		if ('a' <= str[i] && str[i] <= 'z') {
 			if (ch > 'z')
 				ch -= 'z' - 'a' + 1;
 			str[i] = ch;
 		}
-		// nagybetû kódolása
+		// nagybetÅ± kÃ³dolÃ¡sa
 		if ('A' <= str[i] && str[i] <= 'Z') {
 			if (ch > 'Z')
 				ch -= 'Z' - 'A' + 1;
