Fibonacci példa javítva.

--- a/feladatok/01.md
+++ b/feladatok/01.md
@@ -123,14 +123,13 @@ for (int y = 1; y <= oldal; y++) {
  <summary>megoldás:</summary>
  
 ```cpp
+// plusz feladat: a függvény működjön n=1 esetén is!
 int *fib(int n) {
-	int a = 1, b = 1;
 	int *szamok = new int[n];
-	for (int i = 0; i < n; i++) {
-		szamok[i] = a;
-		a = b;
-		b = szamok[i]+b;
-	}
+	szamok[0]=1;
+	szamok[1]=1;
+	for (int i = 2; i < n; i++)
+		szamok[i] = szamok[i-2]+szamok[i-1];
 	return szamok;
 }
 ```
